Name:                SRP-Library
Version:             0.1
Synopsis:            A SRP (strong authentication protocol) implementation
Description:         A SRP (strong authentication protocol) implementation
License:             MIT
Author:              Daniel Öberg
Maintainer:          danielswe@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable srp-client
  Main-is: Client.hs
  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.4,
    SimpleAES == 0.*,
    directory == 1.*,
    network   == 2.*,
    binary    == 0.*,
    random    == 1.*,
    SHA       == 1.*
  Ghc-options: -rtsopts -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans -fno-warn-unused-do-bind -with-rtsopts=-N

Executable srp-server
  Main-is: Server.hs
  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.4,
    SimpleAES == 0.*,
    directory == 1.*,
    network   == 2.*,
    binary    == 0.*,
    random    == 1.*,
    SHA       == 1.*
  Ghc-options: -rtsopts -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans -fno-warn-unused-do-bind -with-rtsopts=-N

Library
  Exposed-Modules: Network.SRP
  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.4,
    SimpleAES == 0.*,
    directory == 1.*,
    network   == 2.*,
    binary    == 0.*,
    random    == 1.*,
    SHA       == 1.*
  Ghc-options: -rtsopts -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans -fno-warn-unused-do-bind -with-rtsopts=-N
